--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -66,20 +66,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# text to test the functions\n",
+    "text=\"\"\"\"@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\")\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_up(s):\n",
-    "    \"\"\"\n",
-    "    Cleans up numbers, URLs, and special characters from a string.\n",
-    "\n",
-    "    Args:\n",
-    "        s: The string to be cleaned up.\n",
-    "\n",
-    "    Returns:\n",
-    "        A string that has been cleaned up.\n",
-    "    \"\"\""
+    "    s=re.sub(r'http\\S+', '', s).lower()\n",
+    "    s=re.sub('[^a-z]+', ' ', s)\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_mod=clean_up(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' ironhack s q website is '"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_mod"
    ]
   },
   {
@@ -101,20 +143,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "import nltk\n",
+    "import ssl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize(s):\n",
-    "    \"\"\"\n",
-    "    Tokenize a string.\n",
-    "\n",
-    "    Args:\n",
-    "        s: String to be tokenized.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of words as the result of tokenization.\n",
-    "    \"\"\""
+    "    try:\n",
+    "        _create_unverified_https_context = ssl._create_unverified_context\n",
+    "    except AttributeError:\n",
+    "        pass\n",
+    "    else:\n",
+    "        ssl._create_default_https_context = _create_unverified_https_context\n",
+    "    tokens = word_tokenize(s)\n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 's', 'q', 'website', 'is']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens = tokenize(text_mod)\n",
+    "tokens"
    ]
   },
   {
@@ -145,20 +218,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.stem import WordNetLemmatizer \n",
+    "from nltk.corpus import wordnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def stem_and_lemmatize(l):\n",
-    "    \"\"\"\n",
-    "    Perform stemming and lemmatization on a list of words.\n",
-    "\n",
-    "    Args:\n",
-    "        l: A list of strings.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of strings after being stemmed and lemmatized.\n",
-    "    \"\"\""
+    "    ps = PorterStemmer()\n",
+    "    stemmed = [ps.stem(w) for w in l]\n",
+    "    \n",
+    "    lemmatizer = WordNetLemmatizer() \n",
+    "    lemmatized_stemmed = [lemmatizer.lemmatize(word) for word in stemmed]\n",
+    "    return lemmatized_stemmed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens_stem_lem=stem_and_lemmatize(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 's', 'q', 'websit', 'is']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens_stem_lem"
    ]
   },
   {
@@ -176,20 +286,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Usuario\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_stopwords(l):\n",
-    "    \"\"\"\n",
-    "    Remove English stopwords from a list of strings.\n",
-    "\n",
-    "    Args:\n",
-    "        l: A list of strings.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of strings after stop words are removed.\n",
-    "    \"\"\""
+    "    without_sw = [word for word in l if not word in stopwords.words()]\n",
+    "    return without_sw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens_w_sw=remove_stopwords(tokens_stem_lem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 'q', 'websit']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens_w_sw"
    ]
   },
   {
@@ -204,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
